--- a/reports/20250226.md
+++ b/reports/20250226.md
@@ -91,10 +91,10 @@
 - **Challenges:** 
 
 #### Nathaniel:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Identified areas for improvement and communicated them with the team via Trello
+- **What worked well:** Communication and feedback was well received.
+- **What I learned:** That theres always room for improvement.
+- **Challenges:** We still have a decent amount of work to do, and there isn't to much time left.
 
 #### Sam:
 - **What I did:** 
@@ -123,7 +123,7 @@
 -
 
 #### Nathaniel:
--
+- Work on various smaller frontend tasks to have our product better match our preset requirements.
 
 #### Sam:
 -
