--- a/reports/20250305.md
+++ b/reports/20250305.md
@@ -88,10 +88,10 @@
 - **Challenges:** 
 
 #### Nathaniel:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Added borders and hover effects to About Us page, customized the scroll bars sitewide to match our color scheme
+- **What worked well:** Editing the different elements wasn't too difficult.
+- **What I learned:** How to customize scroll bars.
+- **Challenges:** Finding what was causing one of the pages to have an unecessary horizontal scroll bar.
 
 #### Sam:
 - **What I did:** 
@@ -120,7 +120,7 @@
 - 
 
 #### Nathaniel:
-- 
+- Implement more finishing touches to frontend
 
 #### Sam:
 - 
