Adding reflection section as well as cleaning up missing parts in the living doc.

--- a/reports/20250305.md
+++ b/reports/20250305.md
@@ -111,7 +111,7 @@
 - 
 
 #### Troy:
-- **Plan for Next Week:** Implement offline mode and work on the presentation.
+- **Plan for Next Week:** Working on presentation board and get it printed by Friday. 
 
 #### Christian:
 - 
