--- a/reports/20250305.md
+++ b/reports/20250305.md
@@ -82,10 +82,10 @@
 - **Challenges:** 
 
 #### Stephen:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Added changing profile examples on home page and changed some styling
+- **What worked well:** Creating the changing picture ended up looking good
+- **What I learned:** Using transitoins and transformation for css and creating functions and hooks
+- **Challenges:** Getting the styling to work and look how it was supposed to
 
 #### Nathaniel:
 - **What I did:** Added borders and hover effects to About Us page, customized the scroll bars sitewide to match our color scheme
@@ -117,7 +117,8 @@
 - 
 
 #### Stephen:
-- 
+- Fixing issues and improving overall look of the website
+
 
 #### Nathaniel:
 - Implement more finishing touches to frontend
