Updated 20250219.md (forgot to do this earlier)

--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -81,10 +81,10 @@
 - **Challenges:** Connecting the breed classification with the dog profiles.
 
 #### Christian:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Added new upload hub pages that splits into two different pages (cats and dogs).
+- **What worked well:** Dedicating specific time every day to work on the project and iterative testing.
+- **What I learned:** I learned more about React and Tailwind scripting.
+- **Challenges:** Learning more about Tailwind and React is still farily difficult and hard but I'm getting the ropes better.
 
 #### Stephen:
 - **What I did:** Worked on finalizing the design of the home page.
@@ -119,7 +119,7 @@
 - Implement dog life stage model into the frontend. Update Dog PDF/Profile to have age bracket.
 
 #### Christian:
-- 
+- Improve AI integration and refine UI components.
 
 #### Stephen:
 - Finish up the home page and test features.
