--- a/reports/20250226.md
+++ b/reports/20250226.md
@@ -79,10 +79,10 @@
 - **Challenges:** Integrating more things into the app makes the testing scripts hard to follow.
 
 #### Christian:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Wasn't able to help out much outside of contributing to the living document.
+- **What worked well:** Upload pages (from last week) integrated well into this weeks workflow and were easily built upon by my teammates.
+- **What I learned:** I always need to be staying ahead of my work more and keeping up to date, especially with everything going on in this class.
+- **Challenges:** Got very busy with school work outside of this class, which took up nearly all of my time.
 
 #### Stephen:
 - **What I did:** 
@@ -117,7 +117,7 @@
 - Work on offline mode as well as continue to finalize our beta product. 
 
 #### Christian:
--
+- Add more automated tests and continue to help where needed to finish the beta product.
 
 #### Stephen:
 -
