--- a/reports/20250305.md
+++ b/reports/20250305.md
@@ -47,7 +47,7 @@
 - Work on offline mode. 
 
 #### Christian:
-- Improve AI integration and refine UI components.
+- Add more automated tests and continue to help where needed to finish the beta product.
 
 #### Stephen:
 - Finalize home page design and conduct UI tests.
@@ -76,10 +76,10 @@
 - **Challenges:** Offline mode is not fully functional yet, and ensuring smooth transitions between offline and online states is proving complex.
 
 #### Christian:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Added an integration test to the testing toolkit and helped out with miscellaneous issues.
+- **What worked well:** I thought I was pretty resourceful and did a good job with building the integration test in a useful way that provides a pretty good foundational test for the app.
+- **What I learned:** I learned more about the different types of testing (unit, integration, validation, and system) as well as how to script these tests using a .tsx file and Vitest.
+- **Challenges:** Outside school work continues to be a big issue as I've had very little time to dedicate to the project, if any.
 
 #### Stephen:
 - **What I did:** Added changing profile examples on home page and changed some styling
@@ -114,7 +114,7 @@
 - **Plan for Next Week:** Working on presentation board and get it printed by Friday. 
 
 #### Christian:
-- 
+- Try to iron out any issues that still need working on, and help get the project completed!
 
 #### Stephen:
 - Fixing issues and improving overall look of the website
