Added to the reports

--- a/reports/20250226.md
+++ b/reports/20250226.md
@@ -67,10 +67,10 @@
 ### 2. Progress and Issues
 
 #### Raed:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Finished researching cat health issues and compiled a json 
+- **What worked well:** Research was pretty simple since reliable information is readily available 
+- **What I learned:** The Json format is extremely useful, especially for fetching information 
+- **Challenges:** The fusion model is still giving me some challenges since I have to fuse two models at the same time.
 
 #### Troy:
 - **What I did:** Implemented dog age model to frontend. Wrote two scripts to verify the correctness of dog api calls/UI.
@@ -111,7 +111,7 @@
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
--
+- Continue working on fusion model and scrap cat life stages since I'd rather focus on quality of the model
 
 #### Troy:
 - Work on offline mode as well as continue to finalize our beta product. 
