--- a/reports/20250305.md
+++ b/reports/20250305.md
@@ -64,10 +64,10 @@
 ### 2. Progress and Issues
 
 #### Raed:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Finished fusion model with 80% accuracy
+- **What worked well:** Training went smoothly, especially with image distortions to improve accuracy
+- **What I learned:** Image augmentation is a must for higher accuracy and overall robustness
+- **Challenges:** There is still much left to be desired in the accuracy
 
 #### Troy:
 - **What I did:** Worked on implementing offline mode functionality and continued preparing for the beta release.
@@ -108,7 +108,7 @@
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
-- 
+- Work on improving model loading times with caching of more efficient methods to load the onnx model 
 
 #### Troy:
 - **Plan for Next Week:** Working on presentation board and get it printed by Friday. 
