--- a/reports/20250226.md
+++ b/reports/20250226.md
@@ -85,10 +85,10 @@
 - **Challenges:** Got very busy with school work outside of this class, which took up nearly all of my time.
 
 #### Stephen:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Worked on adding some features to home page and creating tests
+- **What worked well:** Implementing different features as well as creating the test.
+- **What I learned:** I learned more about writing tests and how they work
+- **Challenges:** Getting things to work and overall learning new things.
 
 #### Nathaniel:
 - **What I did:** Identified areas for improvement and communicated them with the team via Trello
@@ -120,7 +120,7 @@
 - Add more automated tests and continue to help where needed to finish the beta product.
 
 #### Stephen:
--
+- Working on frontened tasks and looking for any areas to improve on.
 
 #### Nathaniel:
 - Work on various smaller frontend tasks to have our product better match our preset requirements.
